--- a/Cryptography Exercises/Cryptography Exercises.csproj
+++ b/Cryptography Exercises/Cryptography Exercises.csproj
@@ -60,6 +60,7 @@
     <Compile Include="PolyalphabeticSubstitution.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextBlockCipher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
