Add Column Transportation Cipher

--- a/Cryptography Exercises/Cryptography Exercises.csproj
+++ b/Cryptography Exercises/Cryptography Exercises.csproj
@@ -55,6 +55,7 @@
       <DependentUpon>AppGUIForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CaesarCipher.cs" />
+    <Compile Include="ColumnTransposition.cs" />
     <Compile Include="DirectSubstitution.cs" />
     <Compile Include="MatrixSubstitution.cs" />
     <Compile Include="PolyalphabeticSubstitution.cs" />
